# mundial-2026-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update_data.yml
configs/: groups_2026.yaml  tournament_2026.yaml
docs/: DOCUMENTO_TECNICO.md
notebooks/: 01_eda.ipynb
outputs/predictions/: group_stage_2026_latest.csv
outputs/reports/: f1_validation.md  f3_model_comparison.md  f4_model_comparison.md  f5_simulation.md  f6_historical_validation.md  f7_dashboard.html
src/: config.py
src/dashboard/: app.py  data.py  figures.py  report.py
src/etl/: clean.py  download.py  fifa_rankings.py  load.py  run_all.py  validate.py
src/evaluation/: backtest_models.py  backtest_tournament.py  evaluate_predictions.py  historical.py  metrics.py
src/features/: context.py  elo.py  elo_features.py  engineer.py  form.py
src/inference/: predict_2026.py
src/models/: baseline_elo.py  calibration.py  dixon_coles.py  gbm_poisson.py  penalties.py  poisson.py  score_matrix.py
src/simulation/: bracket_2026.py  knockout.py  (+6 more)
tests/: test_baseline_elo.py  test_bracket_2026.py  test_calibration.py  test_clean.py  test_context.py  test_dixon_coles.py  test_download.py  test_elo.py  test_elo_features.py  test_evaluate_predictions.py  test_fifa_rankings.py  test_figures.py  test_form.py  test_gbm_poisson.py  test_group_stage.py  test_historical.py  test_knockout.py  test_leakage.py  test_load.py  test_match_sim.py  test_metrics.py  test_monte_carlo.py  test_penalties.py  test_poisson.py  test_predict_2026.py  test_rates.py  test_score_matrix.py  test_tournament_config.py
(+7 files in other folders)
