[project]
name = "mundial-2026-ml"
version = "0.1.0"
description = "Prediccion del Mundial FIFA 2026 con ML - proyecto educativo"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15",
    "requests>=2.31",
    "pyyaml>=6.0",
    "kagglehub>=0.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "tabulate>=0.9",
    "plotly>=5.20",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
